--- a/app/src/main/res/layout/meme_row.xml
+++ b/app/src/main/res/layout/meme_row.xml
@@ -34,6 +34,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        android:adjustViewBounds="true"
+        android:scaleType="fitStart" />
 
 </LinearLayout>
