--- a/app/src/main/res/layout/meme_row.xml
+++ b/app/src/main/res/layout/meme_row.xml
@@ -17,15 +17,13 @@
 
     <VideoView
         android:id="@+id/videoView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:visibility="gone"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewMemeTitle" />
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp" />
 
     <ImageView
         android:id="@+id/imageView"
